[package]
authors = ["unknown <unknown@ad.com>"]
edition = "2018"
name = "archive-cache"
version = "0.1.0"
[dependencies]
chardet = "*"
crossbeam = "*"
futures = "*"
hyper = "*"
image = "*"
log = "*"
lru = "*"
magic = "*"
notify = "4.0.0"
percent-encoding = "*"
pretty-bytes = "*"
relative-path = "0.4.0"
simple_logger = "*"
tree_magic = "*"

[dependencies.unarr]
path = "/home/wangxinyu/unarr.rs"
